--- a/hello-spring/build.gradle
+++ b/hello-spring/build.gradle
@@ -21,6 +21,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+    //implementation("org.springframework:spring-jdbc:7.0.1")
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    //testImplementation("com.h2database:h2:2.4.240")
+    runtimeOnly 'com.h2database:h2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
