--- a/hello-spring/build.gradle
+++ b/hello-spring/build.gradle
@@ -22,7 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
     //implementation("org.springframework:spring-jdbc:7.0.1")
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    //implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     //testImplementation("com.h2database:h2:2.4.240")
     runtimeOnly 'com.h2database:h2'
 
